[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "emulsia"
version = "0.2.0"
authors = [
  { name="kusok", email="ovsyanka@protonmail.com" },
]
description = "Just another one wrap for unicorn"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "unicorn",
    "capstone",

    "enum"
]